# dropimpl

./: .gitignore  makefile  pyproject.toml  readme.md
dropimpl/: __init__.py  __main__.py  core.py
tests/: test_strip.py
